[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/small.png" type="Texture" id=1]
[ext_resource path="res://Sprites/large.png" type="Texture" id=2]
[ext_resource path="res://Sprites/medium.png" type="Texture" id=3]
[ext_resource path="res://Player.gd" type="Script" id=4]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://PlayerFlash.tres" type="Material" id=6]
[ext_resource path="res://PlayerAnimation.tres" type="Animation" id=7]
[ext_resource path="res://ScreenShake.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=6]
resource_name = "Damage"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.315, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4 )
}

[sub_resource type="Animation" id=7]
resource_name = "Invulnerable"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 4 )

[sub_resource type="Animation" id=9]
resource_name = "Damage"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.315, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1 )
}

[sub_resource type="Animation" id=10]
resource_name = "Idle"

[sub_resource type="Animation" id=11]
resource_name = "Invulnerable"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.5, 5.5 )

[sub_resource type="Animation" id=12]
resource_name = "Damage"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.315, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1 )
}

[sub_resource type="Animation" id=13]
resource_name = "Idle"

[sub_resource type="Animation" id=14]
resource_name = "Invulnerable"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 7.5 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 4 )

[node name="Small" type="Sprite" parent="."]
show_behind_parent = true
material = ExtResource( 6 )
texture = ExtResource( 1 )

[node name="PlayerEffect" type="AnimationPlayer" parent="Small"]
anims/Damage = SubResource( 6 )
anims/Idle = ExtResource( 7 )
anims/Invulnerable = SubResource( 7 )

[node name="SmallCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4 )
shape = SubResource( 1 )
disabled = true

[node name="Medium" type="Sprite" parent="."]
visible = false
material = ExtResource( 6 )
texture = ExtResource( 3 )

[node name="PlayerEffect" type="AnimationPlayer" parent="Medium"]
anims/Damage = SubResource( 9 )
anims/Idle = SubResource( 10 )
anims/Invulnerable = SubResource( 11 )

[node name="MediumCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, 2.5 )
shape = SubResource( 2 )
disabled = true

[node name="Large" type="Sprite" parent="."]
visible = false
material = ExtResource( 6 )
texture = ExtResource( 2 )

[node name="PlayerEffect" type="AnimationPlayer" parent="Large"]
anims/Damage = SubResource( 12 )
anims/Idle = SubResource( 13 )
anims/Invulnerable = SubResource( 14 )

[node name="LargeCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 0.5 )
shape = SubResource( 3 )
disabled = true

[node name="HealthTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Camera" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -19.7593 )

[node name="ScreenShake" parent="Camera" instance=ExtResource( 8 )]

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="damage_taken" from="." to="Camera/ScreenShake" method="start" binds= [ 0.2, 15.0, 2.0 ]]
[connection signal="health_change" from="." to="Camera" method="_on_Player_health_change"]
[connection signal="timeout" from="HealthTimer" to="." method="_on_HealthTimer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
